--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "next-supabase-internship-ihsaan-app",
-  "version": "0.1.0",
+  "name": "next-supabase-internship-ihsaan",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "@supabase/supabase-js": "^2.79.0",
+    "autoprefixer": "^10.4.20",
+    "next": "14.2.4",
+    "postcss": "^8.4.47",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "@types/react": "19.2.2"
   }
 }
